[MOD] XQuery: faster tokenization of Western fulltexts